--- a/css/style.css
+++ b/css/style.css
@@ -4,8 +4,105 @@ body {
   background-color: #ffffff;
   overflow-x: hidden;
 }
+.fonte-logado{
+  font-size: 15px;
+  font-style: italic;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  vertical-align: center;
+}
+.pesquisa_usuario {
+  background-color: #e2f3e2;
+  text-align: left;
+  width: auto;
+  margin: 10px;
+  padding: 4%;
+  font-family: 'Poppins', sans-serif;
+  font-size: large;
+  border-style: solid;
+  border-radius: 10px;
+}
+.p_erro {
+  font-style: italic;
+  font-size: large;
+  color: rgb(199, 42, 42);
+}
+.nivel_professor{
+  color: #108a00;
+}
+
+.heading_container, .heading_center{
+  background-color: rgb(221, 245, 198);
+  border: 4px solid black;
+  padding: 10px;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  margin-left: 4%;
+  margin-right: 4%;
+  border-radius: 4px;
+  align-items: left;
+  min-width: 60%;
+  text-align: left;
+}
+.partes-section {
+  background-color: rgb(244, 247, 213);
+  border: 4px solid black;
+  padding: 10px;
+  margin-top: 6%;
+  margin-bottom: 6%;
+  margin-left: 2%;
+  margin-right: 2%;
+  border-radius: 4px;
+  justify-content:center;
+  min-width: 600px;
+}
+.categorias-section {
+  background-color: rgb(233, 213, 247);
+  border: 4px solid black;
+  padding: 10px;
+  margin-top: 6%;
+  margin-bottom: 6%;
+  margin-left: 2%;
+  margin-right: 2%;
+  border-radius: 4px;
+  justify-content: center;
+  min-width: 0px;
+}
+
+.form-control {
+  /*background-color: rgb(231, 247, 213);*/
+  border: 2px solid black;
+  padding: 10px;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  /*margin-left: 18%;*/
+  /*margin-right: 18%;*/
+  border-radius: 8px;
+  justify-content: center;
+  align-items: center;
+  font-size: medium;
+}
+.texto-form {
+  border-radius: 8px;
+  justify-content: center;
+  align-items: center;
+  font-size: large;
+}
+.criterios-section {
+  background-color: rgb(213, 247, 243);
+  border: 4px solid rgb(0, 0, 0);
+  padding: 10px;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  /*margin-left: 18%;*/
+  /*margin-right: 18%;*/
+  border-radius: 4px;
+  justify-content: center;
+  align-items: center;
+  font-size: medium;
+}
+
 .searchbar {
-  margin-bottom: auto;
+  margin-bottom: px;
   margin-top: auto;
   height: 60px;
   background-color: #108a00;
@@ -19,21 +116,21 @@ input::placeholder {
 }
 
 .search_input {
+  width: 340px;
   color: rgb(255, 255, 255);
   border: 0;
   outline: 0;
   background: none;
-  width: 0;
   caret-color: transparent;
   line-height: 40px;
-  transition: width 0.3s linear;
+  /*transition: width 0.3s linear;*/
 }
 
 .searchbar:hover>.search_input {
-  padding: 0 10px;
+  /*padding: 0 10px;
   width: 450px;
+  transition: width 0.4s linear;*/
   caret-color: rgb(255, 255, 255);
-  transition: width 0.4s linear;
 } 
 
 .searchbar:hover>.search_icon {
@@ -173,7 +270,7 @@ a:focus {
 .header_section .header_top {
   padding: 15px 0;
   background: rgb(17,167,46);
-  background: linear-gradient(90deg, rgba(17,167,46,1) 0%, rgba(216,255,224,1) 38%, rgba(255,255,255,1) 54%);
+  background: linear-gradient(90deg, rgba(17,167,46,1) 0%, rgb(172, 255, 190) 30%, rgba(255,255,255,1) 54%);
   height: 208px;
   display: flex;
   justify-content: center;
@@ -182,8 +279,9 @@ a:focus {
 
 .header_section .header_top .cppd-link {
   color: white;
-  text-align: center;
+  text-align: left;
   display: inline-block;
+  padding-left: 1.8%;
 }
 
 .header_section .header_top .cppd-link span {
@@ -211,7 +309,7 @@ a:focus {
   
   position: absolute;
   top: 0;
-  left: 45%;
+  left: 45.6%;
   right: 0;
   bottom: 0;
   
@@ -317,6 +415,9 @@ a:focus {
   color: #ffffff;
   text-align: center;
 }
+.nav-link a{
+  color: #ffffff;
+}
 
 .custom_nav-container .navbar-nav .nav-item:hover .nav-link, .custom_nav-container .navbar-nav .nav-item.active .nav-link {
   color: #f3c93e;
@@ -383,7 +484,10 @@ a:focus {
 
 /*end header section*/
 /* slider section */
+/*CARROSSEL PRINCIPAL*/
 .slider_section {
+  margin: 0px;
+  border-radius: 5px;
   -webkit-box-flex: 1;
       -ms-flex: 1;
           flex: 1;
@@ -394,7 +498,7 @@ a:focus {
       -ms-flex-align: center;
           align-items: center;
   padding: 45px 0;
-  background-color: #ffffff;
+  background-color: #ffffffec;
 
 }
 
@@ -439,7 +543,7 @@ a:focus {
 }
 
 .slider_section .detail-box a:hover {
-  background-color: transparent;
+  background-color: transredparent;
   color: #f3c93e;
 }
 
@@ -722,14 +826,20 @@ a:focus {
 
 .client_section .client_container {
   margin: 15px auto 0 auto;
+  
 }
 
 .client_section .client_container .box {
   margin: 20px auto;
 }
 
+/*OBJETIVO DA CPPD INDEX.HTML*/
 .client_section .client_container .box .detail-box {
+  font-size: larger;
+  font-family: serif;
+  border-radius: 5px;
   padding: 35px;
+  background-color: #ffffff;
   -webkit-box-shadow: 0px 0px 16px 0px rgba(0, 0, 0, 0.29);
   box-shadow: 0px 0px 16px 0px rgba(0, 0, 0, 0.29);
 }
@@ -746,6 +856,7 @@ a:focus {
       -ms-flex-align: end;
           align-items: flex-end;
   margin-top: 25px;
+  
 }
 
 .client_section .client_container .box .client-id .img-box {
@@ -759,6 +870,7 @@ a:focus {
 
 .client_section .client_container .box .client-id .img-box img {
   width: 100%;
+  
 }
 
 .client_section .client_container .box .client-id .name {
