--- a/css/style.css
+++ b/css/style.css
@@ -4,12 +4,7 @@ body {
   background-color: #ffffff;
   overflow-x: hidden;
 }
-.fonte-logado{
-  font-size: 15px;
-  font-style: italic;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  vertical-align: center;
-}
+
 .pesquisa_usuario {
   background-color: #e2f3e2;
   text-align: left;
@@ -31,14 +26,14 @@ body {
 }
 
 .heading_container, .heading_center{
-  background-color: rgb(221, 245, 198);
+  background-color: rgb(231, 247, 213);
   border: 4px solid black;
   padding: 10px;
   margin-top: 10px;
   margin-bottom: 10px;
   margin-left: 4%;
   margin-right: 4%;
-  border-radius: 4px;
+  border-radius: 12px;
   align-items: left;
   min-width: 60%;
   text-align: left;
@@ -51,7 +46,7 @@ body {
   margin-bottom: 6%;
   margin-left: 2%;
   margin-right: 2%;
-  border-radius: 4px;
+  border-radius: 12px;
   justify-content:center;
   min-width: 600px;
 }
@@ -63,7 +58,7 @@ body {
   margin-bottom: 6%;
   margin-left: 2%;
   margin-right: 2%;
-  border-radius: 4px;
+  border-radius: 12px;
   justify-content: center;
   min-width: 0px;
 }
@@ -95,7 +90,7 @@ body {
   margin-bottom: 10px;
   /*margin-left: 18%;*/
   /*margin-right: 18%;*/
-  border-radius: 4px;
+  border-radius: 8px;
   justify-content: center;
   align-items: center;
   font-size: medium;
@@ -116,21 +111,21 @@ input::placeholder {
 }
 
 .search_input {
-  width: 340px;
   color: rgb(255, 255, 255);
   border: 0;
   outline: 0;
   background: none;
+  width: 0;
   caret-color: transparent;
   line-height: 40px;
-  /*transition: width 0.3s linear;*/
+  transition: width 0.3s linear;
 }
 
 .searchbar:hover>.search_input {
-  /*padding: 0 10px;
+  padding: 0 10px;
   width: 450px;
-  transition: width 0.4s linear;*/
   caret-color: rgb(255, 255, 255);
+  transition: width 0.4s linear;
 } 
 
 .searchbar:hover>.search_icon {
@@ -270,7 +265,7 @@ a:focus {
 .header_section .header_top {
   padding: 15px 0;
   background: rgb(17,167,46);
-  background: linear-gradient(90deg, rgba(17,167,46,1) 0%, rgb(172, 255, 190) 30%, rgba(255,255,255,1) 54%);
+  background: linear-gradient(90deg, rgba(17,167,46,1) 0%, rgb(193, 255, 207) 26%, rgba(255,255,255,1) 54%);
   height: 208px;
   display: flex;
   justify-content: center;
@@ -415,9 +410,6 @@ a:focus {
   color: #ffffff;
   text-align: center;
 }
-.nav-link a{
-  color: #ffffff;
-}
 
 .custom_nav-container .navbar-nav .nav-item:hover .nav-link, .custom_nav-container .navbar-nav .nav-item.active .nav-link {
   color: #f3c93e;
@@ -484,10 +476,7 @@ a:focus {
 
 /*end header section*/
 /* slider section */
-/*CARROSSEL PRINCIPAL*/
 .slider_section {
-  margin: 0px;
-  border-radius: 5px;
   -webkit-box-flex: 1;
       -ms-flex: 1;
           flex: 1;
@@ -498,7 +487,7 @@ a:focus {
       -ms-flex-align: center;
           align-items: center;
   padding: 45px 0;
-  background-color: #ffffffec;
+  background-color: #ffffff;
 
 }
 
@@ -543,7 +532,7 @@ a:focus {
 }
 
 .slider_section .detail-box a:hover {
-  background-color: transredparent;
+  background-color: transparent;
   color: #f3c93e;
 }
 
@@ -833,13 +822,8 @@ a:focus {
   margin: 20px auto;
 }
 
-/*OBJETIVO DA CPPD INDEX.HTML*/
 .client_section .client_container .box .detail-box {
-  font-size: larger;
-  font-family: serif;
-  border-radius: 5px;
   padding: 35px;
-  background-color: #ffffff;
   -webkit-box-shadow: 0px 0px 16px 0px rgba(0, 0, 0, 0.29);
   box-shadow: 0px 0px 16px 0px rgba(0, 0, 0, 0.29);
 }
